examples/test/testpolicy11807.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11807
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key24: value23
      key30: value32
      key5: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value47
          key33: value7
          key49: value18
